--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 			  <p>Lead Vocals</p>
 		 </article>
 		 <article class="member">
-			  <img src="img/XXX.png" alt="XXX - Drums" class="member-photo">
+			  <img src="img/Mark.png" alt="Mark Hillyer - Drums" class="member-photo">
 			  <h3>XXX</h3>
 			  <p>Drums</p>
 		 </article>
