--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 		 </article>
 		 <article class="member">
 			  <img src="img/Mark.png" alt="Mark Hillyer - Drums" class="member-photo">
-			  <h3>XXX</h3>
+			  <h3>Mark Hillyer</h3>
 			  <p>Drums</p>
 		 </article>
 	</div>
