--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
 			  <h3>Georgia Bartlet</h3>
 			  <p>Lead Vocals</p>
 		 </article>
-		 <article class="member">
-			  <img src="img/Mark.png" alt="Mark Hillyer - Drums" class="member-photo">
-			  <h3>Mark Hillyer</h3>
-			  <p>Drums</p>
-		 </article>
+         <article class="member">
+            <img src="img/Mark.png" alt="Mark Hillyer - Drums" class="member-photo"> <!-- Add image source -->
+            <h3>Mark Hillyer</h3>
+            <p>Drums</p>
+        </article>
 	</div>
 </section>
 
